Split Error.Type into detailed request sources
