# webflux/example/docs/openapi.yaml
@@ -42,16 +42,16 @@ paths:
                     detail: Invalid request content.
                     instance: /flux-extended-problem-detail/web-exchange-bind-exception
                     errors:
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: name
                       message: Name length must be between 6-10
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: age
                       message: Age cannot be null
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: password
                       message: Password and confirm password do not match
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: confirmPassword
                       message: Password and confirm password do not match
   /flux-extended-problem-detail/unsupported-media-type-status-exception:
@@ -129,7 +129,7 @@ paths:
                     detail: Validation failure
                     instance: /flux-extended-problem-detail/handler-method-validation-exception-request-part
                     errors:
-                    - type: PARAMETER
+                    - type: REQUEST_PART
                       target: file
                       message: File cannot be empty
   /flux-extended-problem-detail/handler-method-validation-exception-request-body:
@@ -159,7 +159,7 @@ paths:
                     detail: Validation failure
                     instance: /flux-extended-problem-detail/handler-method-validation-exception-request-body
                     errors:
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       target: password
                       message: Password cannot be empty
   /flux-extended-problem-detail/handler-method-validation-exception-request-body-validation-result:
@@ -191,7 +191,7 @@ paths:
                     detail: Validation failure
                     instance: /flux-extended-problem-detail/handler-method-validation-exception-request-body-validation-result
                     errors:
-                    - type: PARAMETER
+                    - type: REQUEST_BODY
                       message: Element cannot contain empty values
   /flux-extended-problem-detail/content-too-large-exception:
     post:
@@ -476,10 +476,10 @@ paths:
                     detail: Validation failure
                     instance: /flux-extended-problem-detail/handler-method-validation-exception-request-param
                     errors:
-                    - type: PARAMETER
+                    - type: QUERY_PARAMETER
                       target: param
                       message: Parameter cannot be empty
-                    - type: PARAMETER
+                    - type: QUERY_PARAMETER
                       target: value
                       message: Length must be at least 5
   /flux-extended-problem-detail/handler-method-validation-exception-request-header:
@@ -543,7 +543,7 @@ paths:
                     detail: Validation failure
                     instance: /flux-extended-problem-detail/handler-method-validation-exception-path-variable/abc
                     errors:
-                    - type: PARAMETER
+                    - type: PATH_VARIABLE
                       target: id
                       message: id length must be at least 5
   /flux-extended-problem-detail/handler-method-validation-exception-other:
@@ -606,7 +606,7 @@ paths:
                     detail: Validation failure
                     instance: /flux-extended-problem-detail/handler-method-validation-exception-model-attribute
                     errors:
-                    - type: PARAMETER
+                    - type: MODEL_ATTRIBUTE
                       target: password
                       message: Password cannot be empty
   /flux-extended-problem-detail/handler-method-validation-exception-matrix/{id}:
@@ -646,7 +646,7 @@ paths:
                     detail: Validation failure
                     instance: "/flux-extended-problem-detail/handler-method-validation-exception-matrix/abc;list=a,b,c"
                     errors:
-                    - type: PARAMETER
+                    - type: MATRIX_VARIABLE
                       target: list
                       message: list maximum size is 2
   /flux-extended-problem-detail/handler-method-validation-exception-cookie-value:
@@ -813,7 +813,12 @@ components:
                 type: string
                 description: Source of the error.
                 enum:
-                - PARAMETER
+                - QUERY_PARAMETER
+                - PATH_VARIABLE
+                - REQUEST_BODY
+                - MODEL_ATTRIBUTE
+                - REQUEST_PART
+                - MATRIX_VARIABLE
                 - COOKIE
                 - HEADER
                 - BUSINESS
