# webflux/example/src/main/java/io/github/sbracely/extended/problem/detail/webflux/example/controller/FluxExtendedProblemDetailController.java
@@ -192,22 +192,22 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/web-exchange-bind-exception",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "MODEL_ATTRIBUTE",
                                   "target": "name",
                                   "message": "Name length must be between 6-10"
                                 },
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "MODEL_ATTRIBUTE",
                                   "target": "age",
                                   "message": "Age cannot be null"
                                 },
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "MODEL_ATTRIBUTE",
                                   "target": "password",
                                   "message": "Password and confirm password do not match"
                                 },
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "MODEL_ATTRIBUTE",
                                   "target": "confirmPassword",
                                   "message": "Password and confirm password do not match"
                                 }
@@ -269,7 +269,7 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/handler-method-validation-exception-matrix/abc;list=a,b,c",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "MATRIX_VARIABLE",
                                   "target": "list",
                                   "message": "list maximum size is 2"
                                 }
@@ -301,7 +301,7 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/handler-method-validation-exception-model-attribute",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "MODEL_ATTRIBUTE",
                                   "target": "password",
                                   "message": "Password cannot be empty"
                                 }
@@ -332,7 +332,7 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/handler-method-validation-exception-path-variable/abc",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "PATH_VARIABLE",
                                   "target": "id",
                                   "message": "id length must be at least 5"
                                 }
@@ -363,7 +363,7 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/handler-method-validation-exception-request-body",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "REQUEST_BODY",
                                   "target": "password",
                                   "message": "Password cannot be empty"
                                 }
@@ -394,7 +394,7 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/handler-method-validation-exception-request-body-validation-result",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "REQUEST_BODY",
                                   "message": "Element cannot contain empty values"
                                 }
                               ]
@@ -455,12 +455,12 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/handler-method-validation-exception-request-param",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "QUERY_PARAMETER",
                                   "target": "param",
                                   "message": "Parameter cannot be empty"
                                 },
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "QUERY_PARAMETER",
                                   "target": "value",
                                   "message": "Length must be at least 5"
                                 }
@@ -492,7 +492,7 @@ public class FluxExtendedProblemDetailController {
                               "instance": "/flux-extended-problem-detail/handler-method-validation-exception-request-part",
                               "errors": [
                                 {
-                                  "type": "PARAMETER",
+                                  "type": "REQUEST_PART",
                                   "target": "file",
                                   "message": "File cannot be empty"
                                 }
